# hello_world_rp

./: CMakeLists.txt  LICENSE
packaging/: hello_world_rp.spec
src/: main.c  main.cpp
